--- a/index.html
+++ b/index.html
@@ -40,10 +40,8 @@
 
         <div class="banner-left">
             <h1 class="title">Discover & Host Amazing Events</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                Voluptatibus nisi quisquam nobis pariatur veniam quia, 
-                placeat error deserunt asperiores, id molestias nostrum laboriosam voluptates accusantium, 
-                consequuntur perferendis laborum. Unde, ipsa.</p>
+            <p>Your one-stop platform for managing and attending events of all kinds. 
+                From workshops to concerts, find your next experience here.</p>
         </div>
                     
 
@@ -80,20 +78,17 @@
 
     <main>
         <section class="service-container">
-            <h1 class="service-title">Featured Events</h1>
+            <h1 class="service-title">Upcoming Events</h1>
 
             <div class="services-1">
 
                 <div class="service-card">
                     <img class="service-img" src="image-mashuka/screen-shot-2024-12-17-at-5.23.49-pm.png" alt=""/>
-                    <h1 style="padding: 10px;">Web Development</h1>
+                    <h1 style="padding: 10px;">Annual Startup Pitch Day 2025</h1>
                     <p><i class="fas fa-calendar-alt"></i> <span class="event-date">Oct 15, 2025</span></p>
-                    <p><i class="fas fa-map-marker-alt"></i> <span class="event-location">Dhaka, Bangladesh</span></p>
+                    <p><i class="fas fa-map-marker-alt"></i> <span class="event-location">Startup Hub, NYC</span></p>
                     <p class="service-description">
-                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Ipsam necessitatibus hic, maxime consequuntur impedit recusandae dolorem 
-                        voluptatem voluptas molestiae quod quidem tenetur odit 
-                        rem quae magni pariatur facere explicabo labore.
+                        Witness groundbreaking startups pitch their ideas to a panel of investors.
                     </p>
                     <button class="service-card-btn">
                         <a href="#">View Details</a>
@@ -103,14 +98,11 @@
 
                 <div class="service-card">
                     <img class="service-img" src="image-mashuka/Plantation.jpeg" alt=""/>
-                    <h1 style="padding: 10px;">App Development</h1>
-                    <p><i class="fas fa-calendar-alt"></i> <span class="event-date">Oct 15, 2025</span></p>
-                    <p><i class="fas fa-map-marker-alt"></i> <span class="event-location">Dhaka, Bangladesh</span></p>
+                    <h1 style="padding: 10px;">Tree Plantation</h1>
+                    <p><i class="fas fa-calendar-alt"></i> <span class="event-date">Oct 16, 2025</span></p>
+                    <p><i class="fas fa-map-marker-alt"></i> <span class="event-location">Central Park</span></p>
                     <p class="service-description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Ipsam necessitatibus hic, maxime consequuntur impedit recusandae dolorem 
-                        voluptatem voluptas molestiae quod quidem tenetur odit 
-                        rem quae magni pariatur facere explicabo labore.
+                        A green initiative where participants plant trees to promote a cleaner environment and raise awareness about sustainability.
                     </p>
                     <button class="service-card-btn">
                         <a href="#">View Details</a>
@@ -120,14 +112,11 @@
 
                 <div class="service-card">
                     <img class="service-img" src="image-mashuka/job-fair-feaured.png" alt=""/>
-                    <h1 style="padding: 10px;">Software Development</h1>
-                    <p><i class="fas fa-calendar-alt"></i> <span class="event-date">Oct 15, 2025</span></p>
+                    <h1 style="padding: 10px;">Job Fair</h1>
+                    <p><i class="fas fa-calendar-alt"></i> <span class="event-date">Oct 17, 2025</span></p>
                     <p><i class="fas fa-map-marker-alt"></i> <span class="event-location">Dhaka, Bangladesh</span></p>
                     <p class="service-description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Ipsam necessitatibus hic, maxime consequuntur impedit recusandae dolorem 
-                        voluptatem voluptas molestiae quod quidem tenetur odit 
-                        rem quae magni pariatur facere explicabo labore.
+                        A platform connecting job seekers with employers, offering opportunities for interviews, networking, and career growth.
                     </p>
                     <button class="service-card-btn">
                         <a href="#">View Details</a>
@@ -136,14 +125,11 @@
 
                 <div class="service-card">
                     <img class="service-img" src="image-mashuka/pngtree-event-management-outdoor-image_15934729.jpg" alt=""/>
-                    <h1 style="padding: 10px;">App Development</h1>
-                    <p><i class="fas fa-calendar-alt"></i> <span class="event-date">Oct 15, 2025</span></p>
+                    <h1 style="padding: 10px;">Sweet Festival</h1>
+                    <p><i class="fas fa-calendar-alt"></i> <span class="event-date">Oct 18, 2025</span></p>
                     <p><i class="fas fa-map-marker-alt"></i> <span class="event-location">Dhaka, Bangladesh</span></p>
                     <p class="service-description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Ipsam necessitatibus hic, maxime consequuntur impedit recusandae dolorem 
-                        voluptatem voluptas molestiae quod quidem tenetur odit 
-                        rem quae magni pariatur facere explicabo labore.
+                        A delightful celebration showcasing a variety of traditional and modern sweets, bringing people together through taste and culture.
                     </p>
                     <button class="service-card-btn">
                         <a href="#">View Details</a>
@@ -155,14 +141,11 @@
 
                 <div class="service-card">
                     <img class="service-img" src="image-mashuka/1684758977081.jpeg" alt=""/>
-                    <h1 style="padding: 10px;">App Development</h1>
-                    <p><i class="fas fa-calendar-alt"></i> <span class="event-date">Oct 15, 2025</span></p>
+                    <h1 style="padding: 10px;">Food Festival</h1>
+                    <p><i class="fas fa-calendar-alt"></i> <span class="event-date">Oct 19, 2025</span></p>
                     <p><i class="fas fa-map-marker-alt"></i> <span class="event-location">Dhaka, Bangladesh</span></p>
                     <p class="service-description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Ipsam necessitatibus hic, maxime consequuntur impedit recusandae dolorem 
-                        voluptatem voluptas molestiae quod quidem tenetur odit 
-                        rem quae magni pariatur facere explicabo labore.
+                        A vibrant event featuring diverse cuisines, delicious dishes, and cultural flavors to celebrate the joy of food.
                     </p>
                     <button class="service-card-btn">
                         <a href="#">View Details</a>
@@ -172,14 +155,11 @@
 
                 <div class="service-card">
                     <img class="service-img" src="image-mashuka/50923_rockingham_lions_community_fair_1.jpg" alt=""/>
-                    <h1 style="padding: 10px;">Software Development</h1>
-                    <p><i class="fas fa-calendar-alt"></i> <span class="event-date">Oct 15, 2025</span></p>
+                    <h1 style="padding: 10px;">Local Community Fair 2025</h1>
+                    <p><i class="fas fa-calendar-alt"></i> <span class="event-date">Oct 20, 2025</span></p>
                     <p><i class="fas fa-map-marker-alt"></i> <span class="event-location">Dhaka, Bangladesh</span></p>
                     <p class="service-description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Ipsam necessitatibus hic, maxime consequuntur impedit recusandae dolorem 
-                        voluptatem voluptas molestiae quod quidem tenetur odit 
-                        rem quae magni pariatur facere explicabo labore.
+                        A lively gathering that brings neighbors together with food, games, crafts, and cultural activities to celebrate community spirit.
                     </p>
                     <button class="service-card-btn">
                         <a href="#">View Details</a>
@@ -188,14 +168,11 @@
 
                 <div class="service-card">
                     <img class="service-img" src="image-mashuka/6a00d8341c71c353ef014e8851cd63970d.jpg" alt=""/>
-                    <h1 style="padding: 10px;">App Development</h1>
-                     <p><i class="fas fa-calendar-alt"></i> <span class="event-date">Oct 15, 2025</span></p>
+                    <h1 style="padding: 10px;">Art & Craft 2025</h1>
+                     <p><i class="fas fa-calendar-alt"></i> <span class="event-date">Oct 21, 2025</span></p>
                     <p><i class="fas fa-map-marker-alt"></i> <span class="event-location">Dhaka, Bangladesh</span></p>
                     <p class="service-description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Ipsam necessitatibus hic, maxime consequuntur impedit recusandae dolorem 
-                        voluptatem voluptas molestiae quod quidem tenetur odit 
-                        rem quae magni pariatur facere explicabo labore.
+                        A creative showcase of handmade artworks and crafts, celebrating talent, tradition, and artistic expression.
                     </p>
                     <button class="service-card-btn">
                         <a href="#">View Details</a>
@@ -204,14 +181,12 @@
 
                 <div class="service-card">
                     <img class="service-img" src="image-mashuka/vibrant-colors-blend-together-and-swirl-into-a-mystical-haze-as-the-ceremony-progresses-photo.jpg" alt=""/>
-                    <h1 style="padding: 10px;">App Development</h1>
-                     <p><i class="fas fa-calendar-alt"></i> <span class="event-date">Oct 15, 2025</span></p>
+                    <h1 style="padding: 10px;">Emily's Marriage Ceremony</h1>
+                     <p><i class="fas fa-calendar-alt"></i> <span class="event-date">Oct 22, 2025</span></p>
                     <p><i class="fas fa-map-marker-alt"></i> <span class="event-location">Dhaka, Bangladesh</span></p>
                     <p class="service-description">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-                        Ipsam necessitatibus hic, maxime consequuntur impedit recusandae dolorem 
-                        voluptatem voluptas molestiae quod quidem tenetur odit 
-                        rem quae magni pariatur facere explicabo labore.
+                        A beautifully managed wedding event, organized with attention to detail including venue decor,
+                         guest coordination, catering, and entertainment to ensure a memorable celebration.
                     </p>
                     <button class="service-card-btn">
                         <a href="#">View Details</a>
