--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
     </header>
 
     <main>
+
+        <button>View Events</button>
+        <button>Register Now</button>
+        <button>Admin Login</button>
+
+
         <section class="service-container">
             <h1 class="service-title">Upcoming Events</h1>
 
@@ -192,6 +198,10 @@
                         <a href="#">View Details</a>
                     </button>
                 </div>
+            </div>
+
+            <div>
+                <button>View More</button>
             </div>
 
         </section>        
