--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
 
         </nav>
 
-    <div class="banner"></div>
+        <div class="banner">
+            <div class="overlay-text">Welcome to EVENTIFY – Your Event Partner</div>
+        </div>
+
+
 
         <div class="banner-left">
             <h1 class="title">Discover & Host Amazing Events</h1>
