--- a/index.html
+++ b/index.html
@@ -82,9 +82,12 @@
 
     <main>
 
-        <button>View Events</button>
-        <button>Register Now</button>
-        <button>Admin Login</button>
+        
+    <div class="b2">
+        <button class="b">View Events</button>
+        <button class="b">Register Now</button>
+        <button class="b">Admin Login</button>
+    </div>
 
 
         <section class="service-container">
@@ -205,7 +208,7 @@
             </div>
 
             <div>
-                <button>View More</button>
+                <button class="b1">View More....</button>
             </div>
 
         </section>        
